--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 language: php
+
 php:
 - '5.5'
 - '5.4'
+
+before_install:
+  - composer install
+  - mysql -e "create database IF NOT EXISTS wordpress;" -uroot
+  - bash bin/install-wp.sh
+  - npm install
+  - npm start
+
+script:
+  - npm test
