--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "behat/mink-extension": "2.*@dev",
         "behat/mink-browserkit-driver": "*@dev",
         "behat/mink-goutte-driver": "*@dev",
-        "behat/mink-selenium2-driver": "*@dev",
-        "phpunit/phpunit": "^5.6"
+        "behat/mink-selenium2-driver": "*@dev"
     },
     "autoload": {
       "psr-4": {
