--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,15 @@ php:
 - '7.0'
 - '5.6'
 
+env:
+  - WP_PATH=/tmp/wordpress
+  - PORT=8080
+
 before_install:
   - composer install
   - mysql -e "create database IF NOT EXISTS wordpress;" -uroot
   - bash bin/install-wp.sh
+  - bin/wp server --host=0.0.0.0 --port=$PORT --docroot=$WP_PATH --path=$WP_PATH  >/dev/null 2>&1 &
   - npm install
   - npm start
 
