fix global env variables on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ php:
 - '5.6'
 
 env:
-  - WP_PATH=/tmp/wordpress
-  - PORT=8080
+  global:
+    - WP_PATH=/tmp/wordpress
+    - PORT=8080
 
 before_install:
   - composer install
