--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ php:
 env:
   global:
     - WP_PATH=/tmp/wordpress
-    - PORT=8080
+    - WP_PORT=8080
 
 before_install:
   - composer install
   - mysql -e "create database IF NOT EXISTS wordpress;" -uroot
   - bash bin/install-wp.sh
-  - ./wp-cli-nightly.phar server --host=0.0.0.0 --port=$PORT --docroot=$WP_PATH --path=$WP_PATH  >/dev/null 2>&1 &
+  - ./wp-cli-nightly.phar server --host=0.0.0.0 --port=$WP_PORT --docroot=$WP_PATH --path=$WP_PATH  >/dev/null 2>&1 &
   - npm install
   - npm start
 
