--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -4,8 +4,13 @@ default:
       paths:
         - %paths.base%/features
       contexts:
-        - VCCW\Mink\WordPressExtension\Context
+        - VCCW\Behat\Mink\WordPressExtension\Context\WordPressContext
   extensions:
+    VCCW\Behat\Mink\WordPressExtension:
+      roles:
+        administrator:
+          username: admin
+          password: admin
     Behat\MinkExtension:
       base_url: http://127.0.0.1:8080
       sessions:
