--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -11,6 +11,9 @@ default:
         administrator:
           username: admin
           password: admin
+        editor:
+          username: editor
+          password: editor
     Behat\MinkExtension:
       base_url: http://127.0.0.1:8080
       sessions:
