remove `npm start` and `npm stop`

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "wordpress-extension",
   "scripts": {
-    "start": "phantomjs --webdriver=4444 --ignore-ssl-errors=yes --cookies-file=/tmp/webdriver_cookie.txt > /tmp/webdriver_output.txt &",
-    "stop": "pgrep phantomjs | xargs kill",
-    "test": "vendor/bin/behat"
+    "phantomjs-start": "phantomjs --webdriver=4444 --ignore-ssl-errors=yes --cookies-file=/tmp/webdriver_cookie.txt > /tmp/webdriver_output.txt &",
+    "phantomjs-stop": "pgrep phantomjs | xargs kill",
+    "test": "/usr/bin/env node bin/run-tests.js"
   },
   "repository": {
     "type": "git",
