--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,16 @@ env:
 
 before_install:
   - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
+  - sudo apt-get remove -y nodejs
   - sudo apt-get install -y nodejs
+  - which node
   - node --version
   - composer install
   - mysql -e "create database IF NOT EXISTS wordpress;" -uroot
   - bash bin/install-wp.sh
   - ./wp-cli-nightly.phar server --host=0.0.0.0 --port=$WP_PORT --docroot=$WP_PATH --path=$WP_PATH  >/dev/null 2>&1 &
   - npm install
-  - npm start
+  - npm run phantomjs-start
   - sleep 10
 
 script:
