--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "wordpress-extension",
   "scripts": {
-    "start": "phantomjs --webdriver=4444 --ignore-ssl-errors=yes --cookies-file=/tmp/webdriver_cookie.txt > /tmp/webdriver_output.txt &",
-    "stop": "pgrep phantomjs | xargs kill",
+    "wp-install": "WP_PATH=/tmp/wordpress WP_PORT=8080 /usr/bin/env bash bin/install-wp.sh",
+    "wp-start": "WP_PATH=/tmp/wordpress WP_PORT=8080 ./wp-cli-nightly.phar server --host=0.0.0.0 --port=$WP_PORT --docroot=$WP_PATH --path=$WP_PATH",
+    "phantomjs-start": "phantomjs --webdriver=4444 --ignore-ssl-errors=yes --cookies-file=/tmp/webdriver_cookie.txt > /tmp/webdriver_output.txt &",
+    "phantomjs-stop": "pgrep phantomjs | xargs kill",
     "test": "vendor/bin/behat"
   },
   "repository": {
