--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-
 language: php
 
 php:
@@ -12,10 +10,9 @@ env:
     - WP_PORT=8080
 
 before_install:
-  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-  - sudo apt-get remove -y nodejs
-  - sudo apt-get install -y nodejs
   - which node
+  - node --version
+  - nvm alias default latest
   - node --version
   - composer install
   - mysql -e "create database IF NOT EXISTS wordpress;" -uroot
