--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "wp-start": "WP_PATH=/tmp/wordpress WP_PORT=8080 ./wp-cli-nightly.phar server --host=0.0.0.0 --port=$WP_PORT --docroot=$WP_PATH --path=$WP_PATH",
     "phantomjs-start": "phantomjs --webdriver=4444 --ignore-ssl-errors=yes --cookies-file=/tmp/webdriver_cookie.txt > /tmp/webdriver_output.txt &",
     "phantomjs-stop": "pgrep phantomjs | xargs kill",
-    "test": "vendor/bin/behat"
+    "test": "/usr/bin/env node bin/run-tests.js"
   },
   "repository": {
     "type": "git",
