--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,14 @@ php:
 - '7.0'
 - '5.6'
 
-env:
-  global:
-    - WP_PATH=/tmp/wordpress
-    - WP_PORT=8080
-
 before_install:
   - nvm install node
   - nvm alias default node
   - node --version
   - composer install
-  - bash bin/install-wp.sh
-  - ./wp-cli-nightly.phar server --host=0.0.0.0 --port=$WP_PORT --docroot=$WP_PATH --path=$WP_PATH  >/dev/null 2>&1 &
   - npm install
+  - npm run wp-install
+  - npm run wp-start >/dev/null 2>&1 &
 
 script:
   - npm test
