--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wordpress-extension",
   "scripts": {
-    "wp-install": "WP_PATH=/tmp/wordpress WP_PORT=8080 /usr/bin/env bash bin/install-wp.sh",
-    "wp-start": "WP_PATH=/tmp/wordpress WP_PORT=8080 ./wp-cli-nightly.phar server --host=0.0.0.0 --port=$WP_PORT --docroot=$WP_PATH --path=$WP_PATH",
+    "wp-install": "/usr/bin/env bash bin/install-wp.sh",
+    "wp-start": "./wp-cli-nightly.phar server --host=0.0.0.0 --port=8080 --docroot=/tmp/wordpress --path=/tmp/wordpress",
     "phantomjs-start": "phantomjs --webdriver=4444 --ignore-ssl-errors=yes --cookies-file=/tmp/webdriver_cookie.txt > /tmp/webdriver_output.txt &",
     "phantomjs-stop": "pgrep phantomjs | xargs kill",
     "test": "/usr/bin/env node bin/run-tests.js"
