--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ php:
 - '7.0'
 - '5.6'
 
+env:
+  matrix:
+    - WP_VERSION=nightly
+    - WP_VERSION=latest
+    - WP_VERSION=4.5
+
 before_install:
   - nvm install node
   - nvm alias default node
