--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -4,6 +4,7 @@ default:
       paths:
         - %paths.base%/features
       contexts:
+        - FeatureContext
         - VCCW\Behat\Mink\WordPressExtension\Context\WordPressContext
         - Behat\MinkExtension\Context\MinkContext
   extensions:
