--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - node --version
   - composer install
   - npm install
-  - npm run wp-install
+  - npm run install-wp
   - npm run wp >/dev/null 2>&1 &
 
 script:
