--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wordpress-extension",
   "scripts": {
-    "wp-install": "/usr/bin/env bash bin/install-wp.sh",
-    "wp": "./wp-cli-nightly.phar server --host=0.0.0.0 --port=8080 --docroot=/tmp/wordpress --path=/tmp/wordpress",
+    "install-wp": "curl https://raw.githubusercontent.com/vccw-team/install-wp/master/install-wp.sh | /usr/bin/env bash",
+    "wp": "curl https://raw.githubusercontent.com/vccw-team/install-wp/master/run-wp.sh | /usr/bin/env bash",
     "phantomjs-start": "phantomjs --webdriver=4444 --ignore-ssl-errors=yes --cookies-file=/tmp/webdriver_cookie.txt > /tmp/webdriver_output.txt &",
     "phantomjs-stop": "pgrep phantomjs | xargs kill",
     "test": "/usr/bin/env node bin/run-tests.js"
