--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ php:
 
 env:
   matrix:
-    - WP_VERSION=nightly
-    - WP_VERSION=latest
-    - WP_VERSION=4.5
+    - WP_VERSION=nightly WP_THEME=twentyseventeen
+    - WP_VERSION=latest WP_THEME=twentysixteen
+    - WP_VERSION=4.5 WP_THEME=twentyfifteen
 
 before_install:
   - nvm install node
