--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
         "behat/mink-extension": "2.*@dev",
         "behat/mink-browserkit-driver": "*@dev",
         "behat/mink-goutte-driver": "*@dev",
-        "behat/mink-selenium2-driver": "*@dev"
+        "behat/mink-selenium2-driver": "*@dev",
+        "phpunit/phpunit": "^5.6"
     },
     "autoload": {
-      "psr-4": {
-        "VCCW\\Behat\\Mink\\WordPressExtension\\": "src/"
-      }
+        "psr-4": {
+            "VCCW\\Behat\\Mink\\WordPressExtension\\": "src/"
+        }
     }
 }
