--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,11 @@
             "email": "miya0001@users.noreply.github.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "behat/behat": "3.*@stable",
-        "behat/mink": "1.6.*@dev",
-        "behat/mink-extension": "2.*@dev",
-        "behat/mink-browserkit-driver": "*@dev",
-        "behat/mink-goutte-driver": "*@dev",
-        "behat/mink-selenium2-driver": "*@dev",
+        "behat/behat": "~3.2",
+        "behat/mink": "~1.7",
+        "behat/mink-extension": "~2.2",
+        "behat/mink-selenium2-driver": "~1.3.1",
         "phpunit/phpunit": "^5.6"
     },
     "autoload": {
