--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "vccw-team/wordpress-extension",
     "description": "WordPress extension for the Behat",
-    "type": "library",
     "license": "MIT",
     "authors": [
         {
@@ -15,6 +14,9 @@
         "behat/mink-extension": "~2.2",
         "behat/mink-selenium2-driver": "~1.3.1",
         "phpunit/phpunit": "^5.6"
+    },
+    "require-dev": {
+        "phpspec/phpspec": "^3.1"
     },
     "autoload": {
         "psr-4": {
