--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "install-wp": "curl https://raw.githubusercontent.com/vccw-team/install-wp/master/install-wp.sh | /usr/bin/env bash",
     "wp": "curl https://raw.githubusercontent.com/vccw-team/install-wp/master/run-wp.sh | /usr/bin/env bash",
-    "test": "/usr/bin/env node bin/run-tests.js"
+    "phpspec": "/usr/bin/env node bin/run-phpspec.js",
+    "behat": "/usr/bin/env node bin/run-tests.js",
+    "test": "npm run phpspec && npm run behat"
   },
   "repository": {
     "type": "git",
