--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "behat/mink": "~1.7",
         "behat/mink-extension": "~2.2",
         "behat/mink-selenium2-driver": "~1.3.1",
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": "^5.6",
+        "behat/mink-goutte-driver": "^1.2",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.1"
