--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "behat/mink-extension": "~2.2",
         "behat/mink-selenium2-driver": "~1.3.1",
         "phpunit/phpunit": "^5.6",
-        "behat/mink-goutte-driver": "^1.2"
+        "behat/mink-goutte-driver": "^1.2",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.1"
