remove phpunit from dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ php:
 
 env:
   matrix:
-    - WP_VERSION=nightly WP_THEME=twentysixteen
-    - WP_VERSION=latest WP_THEME=twentysixteen
+    - WP_VERSION=nightly WP_THEME=twentyseventeen
+    - WP_VERSION=latest WP_THEME=twentyseventeen
 
 before_install:
   - nvm install node
